/*
 * $Id: ChangeLog,v 1.1658 2003/11/05 09:55:36 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-05 14:37 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
    ! HB_{PUT,GET}_LE_DOUBLE macros restored. I've forgot I used them
      in DBFFPT
  * xharbour/config/global.cf
    - removed DBFCDXOLD lib - this was only for my tests to compare
      new and old CDX RDD and should never be in CVS - sorry

2003-11-05 08:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! contrib/libct/Makefile.bc
    ! minor fix

2003-11-05 04:24 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/hbdefs.h
  * xharbour/include/hbrddcdx.h
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.h
    ! removed non ISO C standard construction which cannot be compiled
      by some compilers
    ! adding some missed casting to make BCC happy
    ! all internal function declared as static

2003-11-04 10:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbfcdx/dbfcdx1.h
    - Removed redundant macro.
  * source/rdd/dbfcdx/dbfcdx1.c
    + Added missing void in function definition.

2003-11-04 09:57 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbdefs.h
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx1.c
    ! Fixed compilation errors.

    /* Przemek I was forced to modify HB_GET_SORTDBL() to accept value to assign to, because other wise we get something like:

         SomeFunction( { some code block is invalis as an expression } )

       Can you please review my change to see if it's ok?
    */

  * tests/rddspeed.prg
    * Uncommented #define TST_NUM

2003-11-04 01:55 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    * added an optimization for ordKeyNo() and dbOrderInfo(DBOI_POSITION)
